--- a/UnionCafe/src/main/webapps/WEB-INF/web.xml
+++ b/UnionCafe/src/main/webapps/WEB-INF/web.xml
@@ -1,12 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-                             http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                             https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+         version="5.0">
 
+    <display-name>UnionCafe Web Application</display-name>
+
+    <!-- Default welcome page -->
     <welcome-file-list>
-        <welcome-file>webapps/JSP/Home.jsp</welcome-file>
+        <welcome-file>Home/User/Home.jsp</welcome-file>
     </welcome-file-list>
+
+    <!-- Map JSP file to a clean URL (/home) -->
+    <servlet>
+        <servlet-name>homePage</servlet-name>
+        <jsp-file>/Home/User/Home.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>homePage</servlet-name>
+        <url-pattern>/home</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>categoryPage</servlet-name>
+        <jsp-file>/Home/User/Category.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>categoryPage</servlet-name>
+        <url-pattern>/category</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>bookingPage</servlet-name>
+        <jsp-file>/Home/User/Booking.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>bookingPage</servlet-name>
+        <url-pattern>/booking</url-pattern>
+    </servlet-mapping>
+
+
+    <!-- Static resource mappings -->
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/Home/User/Images/*</url-pattern>
+    </servlet-mapping>
+
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/css/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/Home/User/JS/*</url-pattern>
+    </servlet-mapping>
+
+
 
 </web-app>
