--- a/UnionCafe/pom.xml
+++ b/UnionCafe/pom.xml
@@ -22,6 +22,12 @@
             <version>5.3.39</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>6.2.2</version> <!-- check latest stable version -->
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
