--- a/UnionCafe/pom.xml
+++ b/UnionCafe/pom.xml
@@ -78,6 +78,11 @@
             <version>5.4.3.Final</version>
         </dependency>
         <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+        <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
             <version>2.2</version>
